--- a/project/Back/Ssaf_play/src/main/resources/application.properties
+++ b/project/Back/Ssaf_play/src/main/resources/application.properties
@@ -10,3 +10,6 @@ mybatis.mapper-locations=classpath*:mappers/*.xml
 mybatis.type-aliases-package=com.ssaf.play.dto
 
 server.port=9999
+
+#spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=resources/upload
